src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Complaint Process</fullName>
        <description>Complaint Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>1%3DInvestigating</fullName>
        </values>
        <values>
            <fullName>2%3DSuspended</fullName>
        </values>
        <values>
            <fullName>3%3DFinal Position Released</fullName>
        </values>
        <values>
            <fullName>4%3D2nd Final Position Released</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed %28Final%29</fullName>
        </values>
        <values>
            <fullName>Finished</fullName>
        </values>
        <values>
            <fullName>Have tracked</fullName>
        </values>
        <values>
            <fullName>Insufficient Document</fullName>
        </values>
        <values>
            <fullName>Need track</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Reopened</fullName>
        </values>
        <values>
            <fullName>Requires Manager Review</fullName>
        </values>
        <values>
            <fullName>Waiting Process</fullName>
        </values>
        <values>
            <fullName>Waiting for Reply</fullName>
        </values>
        <values>
            <fullName>呼叫等待</fullName>
        </values>
        <values>
            <fullName>已升级</fullName>
        </values>
        <values>
            <fullName>已结束</fullName>
        </values>
        <values>
            <fullName>新建</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Inquiry Process</fullName>
        <description>Inquiry Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SSI</fullName>
        <description>Service Satisfaction Index</description>
        <isActive>true</isActive>
        <values>
            <fullName>呼叫等待</fullName>
        </values>
        <values>
            <fullName>已升级</fullName>
        </values>
        <values>
            <fullName>已结束</fullName>
        </values>
        <values>
            <fullName>新建</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Activity_Code__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Activity Code for the case 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Activity Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Car_Owner__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Vehicle owner (since it does not necessarily have to be the complainant) 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Car Owner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases(Car Owner)</relationshipLabel>
        <relationshipName>Car_Owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Category__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Category for Inquiry 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Case Category</label>
        <picklist>
            <picklistValues>
                <fullName>MBCL Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBAC Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smart Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inquiry</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Class__c</fullName>
        <label>Case Class</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After-Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others-Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others-After-Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Complainant__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Person complaining, aka complainant 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Case Complainant</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Case Complainant)</relationshipLabel>
        <relationshipName>Case_Complainant</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Dealer__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Dealer in regards of complaint 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Case Dealer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Dealer)</relationshipLabel>
        <relationshipName>Dealer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_FieldManager__c</fullName>
        <defaultValue>false</defaultValue>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Flag whether the complaint is with a field manager 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Case FieldManager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Follow_Up__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Follow-up action for this case 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Case Follow Up</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Involvement_MPC__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Complainant&apos;s involvement with MPC 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Case Involvement(MPC)</label>
        <picklist>
            <picklistValues>
                <fullName>Media/Potential Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL/WL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Litigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authority (AQSIQ/CCA etc)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daimler Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Nature_MPC__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: MPC Case Nature 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Case Nature(MPC)</label>
        <picklist>
            <picklistValues>
                <fullName>0=Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_RepeatCause__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Reason why repeat complaints were made 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Case RepeatCause</label>
        <picklist>
            <picklistValues>
                <fullName>0=No contact with customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Not satisfied with reply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_SubType__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Subtype of Case 
Used in: Page Layouts, Reports 

Modify History 
Modify By: Reak yin 2013.1.10
Modify Reason: Complaint Sub Type changed to Case Sub Type
*/</description>
        <label>Case SubType</label>
        <picklist>
            <controllingField>Case_Type__c</controllingField>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other operation department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agent Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Call Could Not Be Get Through</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Level Of Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer-pre-sales service attitude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer - Professionalism of  Sales Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer-delivered date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other sales complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer-sales price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer-integrity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer-other sales complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other after sales complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire or Gasbag Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer-after sales service attitude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer-maintenance speciality and skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer-maintenance latency time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer - Environment And Facility of Rest Area/Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer-repaire/maintenance/fitting price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer-change component quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer-component delivery data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer-problem feedback processing time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer-other after sales complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product-quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product-others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSA - Waiting Time of Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSA-RSA service attitude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSA - Professionalism of Rescue Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Consultant Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <label>Case Type</label>
        <picklist>
            <picklistValues>
                <fullName>After-Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complain &amp; feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant MBCL truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultanting MBCL microbus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer contact method</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance &amp; Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guarantee repair &amp; maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual information change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing chance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing crisis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maybach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBCL gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network development department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public connection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase &amp; deliver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recruit campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Second car exchange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary hotline</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Complaint_Date__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Date customer complaint 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Complaint Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Complaint_Prioritization_Categorizatio__c</fullName>
        <label>Complaint Prioritization &amp; Categorizatio</label>
        <picklist>
            <picklistValues>
                <fullName>Product Liability Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warranty Liability Case</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Issue__c</fullName>
        <label>Customer Issue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Requests_Transport__c</fullName>
        <defaultValue>false</defaultValue>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Flag whether the customer requested transport from the dealer linked to this complaint 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Customer Requests Transport</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Statement__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Full statement of customer made at the time of complaint 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Customer Statement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dealer_Provides_Transport__c</fullName>
        <defaultValue>false</defaultValue>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Flag whether the dealer provides transport for complainant 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Dealer Provides Transport</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Defective_Item__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Defective Item of the complaint 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Defective Item</label>
        <picklist>
            <picklistValues>
                <fullName>0=Overall Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Engine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Chassis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3=Body</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4=Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Defective_SubItem__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Defective sub-item of the complaint 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Defective SubItem</label>
        <picklist>
            <controllingField>Defective_Item__c</controllingField>
            <picklistValues>
                <fullName>Overall Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engine, Crankcase ventilation, Cylinder Head, Crankcase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Driving Mechanism</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engine Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixer Preparation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Intake, Booster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exhaust Manifold, Exhaust Brake, Waste Gas Purification Apparatus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electric Device of Engine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engine Lubrication, Engine Oil Cooling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engine Cooling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engine Suspension Device</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Mount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuel Oil System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exhaust Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wiring, Device and instrument</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clutch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Transmission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Transmission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pedal System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frame, Belt Driving Trailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Front Axle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rear Axle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wheel, Measuring A Chassis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transmission Shaft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brake Hydraulic Mechanism and a Mechanical Mechanism</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steering Device</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Body Outline</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Department_Lead__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Department lead of complaint 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Department Lead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Department of complaint 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>CG Other department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CG After-sales department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CG fittings department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CG Technical department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CG Sales department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes Other department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes After-sales department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes fittings department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes Technical department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes Sales department</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Group__c</fullName>
        <description>Demo purpose. Delete it after demo.</description>
        <label>Email Group</label>
        <referenceTo>Email_Mapping_Table__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Status__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: State of sent mail 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Email Status</label>
        <picklist>
            <picklistValues>
                <fullName>0=Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Returned Undeliverable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3=Not required to send</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4=Not Sent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Engineer__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: The engineer (at the call center) responsible for providing technical consultance 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Engineer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalate_Date_to_CO__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Date when the case was escalated to CO 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Escalate Date to CO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Escalate_Date_to_RO__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Date when the case was escalated to RO 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Escalate Date to RO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Escalation__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Escalation level of complaint 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Escalation</label>
        <picklist>
            <picklistValues>
                <fullName>0=Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Regional Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Central Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3=None</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FFPositionDate__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: First Final Position Release Date 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>FFPositionDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feedback_Date__c</fullName>
        <label>Feedback Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feedback_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Required to have feedback flag 
Used in: Page Layouts, Reports 

Modify History 
Modify By: Tony Liu
Modify Reason: Chane Field Name&amp; Label
*/</description>
        <label>Feedback Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final__c</fullName>
        <defaultValue>false</defaultValue>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Is the final complaint for this problem 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Final</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_OB_By__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: First outbound contact person 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>First OB By</label>
        <picklist>
            <picklistValues>
                <fullName>0=Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Regional Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Central Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3=None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_OB_Date__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: First outbound date 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>First OB Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fourth_OB_By__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Fourth outbound contact person 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Fourth OB By</label>
        <picklist>
            <picklistValues>
                <fullName>0=Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Regional Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Central Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3=None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fourth_OB_Date__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Fourth outbound date 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Fourth OB Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Goodwill_Category__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function:Type of goodwill given to complainant 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Goodwill Category</label>
        <picklist>
            <picklistValues>
                <fullName>Own Goodwill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Market Goodwill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warranty Extension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade-in</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Goodwill_Cost__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Cost attached to goodwill given to complainant 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Goodwill Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Goodwill_Details__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Details of goodwill given to complainant 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Goodwill Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>